--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -18,4 +18,50 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+@layer utilities {
+  .max-width-container {
+    @apply max-w-7xl mx-auto px-4 sm:px-8 lg:px-10;
+  }
+
+  .custom-transition {
+    @apply transition-all duration-150 ease-linear;
+  }
+
+  .section-padding {
+    @apply py-20;
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .scrollbar::-webkit-scrollbar {
+    width: 5px;
+    height: 10px;
+    scrollbar-width: 2rem;
+  }
+
+  /* .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #fff;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #222;
+    border-radius: 100vh;
+    border: 2px solid #e7e7ee;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #082bee;
+  } */
 }
